--- a/_layouts/myposts.html
+++ b/_layouts/myposts.html
@@ -7,84 +7,45 @@ layout: default
     <hr />
   </header>
 
-  <div class="post-content">
-    {{ content }}
-
-    {% assign p_array = "" | split:"|"  %}
-    {% for project in site.project %}
-      {% capture p_slug %}{{ myposts.url | split:"/" | last }},{{ myposts.url }}{% endcapture %}
-      {% assign p_slug_arr = p_slug | split:"," %}
-      {% assign p_array = p_array | push: p_slug_arr  %}
-    {% endfor %}
-
-    <div class="projects">
-      {% include myposts_tags.html %}
-   <span class="time">{{ page.date | date_to_string }}</span>
-{% if page.categories %}
-  <span class="categories">
-    &raquo; {% for category in page.categories %}<a href="/category/{{ category }}">{{ category }}</a>{% if forloop.last == false %}, {% endif %}{% endfor %}
-  </span>
-{% endif %}
-
-<div class="content">
-  <div class="post">{{ content }}</div>
-  {% include share-page.html %}
-</div>
-
-{% assign hasSimilar = '' %}
-  {% for post in site.myposts  %}
-    {% assign postHasSimilar = false %}
-      {% for tag in myposts.categories %}
-        {% for thisTag in myposts.categories %}
-          {% if postHasSimilar == false and hasSimilar.size < 6 and post != page and tag == thisTag %}
-            {% if hasSimilar.size == 0 %}
-            <div class="panel-body">
-              <h4>Related Posts</h4>
-              <ul>
-            {% endif %}
-                <li class="relatedPost">
-                  <a href="{{ site.url }}{{ myposts.url }}">{{ myposts.title }}</a>
-                  {% if post.categories %}
-                    (Categories: {% for category in post.categories %}<a href="/category/{{ category }}">{{ category }}</a>{% if forloop.last == false %}, {% endif %}{% endfor %})
-                  {% endif %}
-                </li>
-          {% capture hasSimilar %}{{ hasSimilar }}*{% endcapture %}
-          {% assign postHasSimilar = true %}
-        {% endif %}
-      {% endfor %}
+<div class="post-content">
+  <hr />
+  {% for category in site.categories %}
+    {% capture category_slug %}{{ category | first }}{% endcapture %}
+    {% for c_slug in category_slug %}
+      {% if c_slug == page.categories %}
+        <button class="btn btn-sm btn-default active">{{ c_slug }}</button>
+      {% else %}
+        <a href="/category/{{ c_slug }}" class="btn btn-sm btn-default">{{ c_slug }}</a>
+      {% endif %}
     {% endfor %}
   {% endfor %}
-  {% if hasSimilar.size > 0 %}
-  </ul>
-</div>
-{% endif %}
 
-<div class="PageNavigation">
-  {% if page.previous.url %}
-    <a class="prev" href="{{ page.previous.url }}">&laquo; {{ page.previous.title }}</a>
-  {% endif %}
-  {% if page.next.url %}
-    <a class="next" href="{{ page.next.url }}">{{ page.next.title }} &raquo;</a>
-  {% endif %}
-</div>
+  <hr />
+  {% if site.categories[page.categories] %}
+    {% for post in site.categories[page.categories] %}
+      {% capture post_year %}{{ post.date | date: '%Y' }}{% endcapture %}
+      {% if forloop.first %}
+          <h4>{{ post_year }}</h4>
+          <div class="list-group">
+      {% endif %}
 
-<div class="disqus-comments">
-  <div id="disqus_thread"></div>
-  <script type="text/javascript">
-    /* <![CDATA[ */
-    var disqus_shortname = "{{ site.disqus_shortname }}";
-    var disqus_identifier = "{{ site.url }}_{{ page.title }}";
-    var disqus_title = "{{ page.title }}";
-    /* * * DON'T EDIT BELOW THIS LINE * * */
-    (function() {
-        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-        dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-    })();
-    /* ]]> */
-  </script>
+      {% if forloop.first == false %}
+        {% assign previous_index = forloop.index0 | minus: 1 %}
+        {% capture previous_post_year %}{{ site.categories[page.categories][previous_index].date | date: '%Y' }}{% endcapture %}
+        {% if post_year != previous_post_year %}
+          </div>
+          <h4>{{ post_year }}</h4>
+          <div class="list-group">
+        {% endif %}
+      {% endif %}
+        <ul class="posts">
+          <li><a href="{{ post.url }}">{{ post.title }}</a> &raquo; <i><span>{{ post.date | date_to_string }}</span></i></li>
+        </ul>
+      {% if forloop.last %}
+        </div>
+      {% endif %}
+    {% endfor %}
+  {% else %}
+    <p>There are no posts in this categories.</p>
+  {% endif %}
 </div>
-    
-    </div>
-  </div>
-</article>
