--- a/_layouts/myposts.html
+++ b/_layouts/myposts.html
@@ -1,9 +1,10 @@
 ---
 layout: default
 ---
-<header class="post-header">
-  <h1 class="post-title">{{ site.categories }}</h1>
-</header>
+ <header class="post-header">
+    <h1 class="post-title">{{ page.title }}</h1>
+    <hr />
+  </header>
 
 <div class="post-content">
   <hr />
