--- a/_layouts/myposts.html
+++ b/_layouts/myposts.html
@@ -3,10 +3,9 @@ layout: default
 ---
  <header class="post-header">
     <h1 class="post-title">{{ page.title }}</h1>
-    <hr />
   </header>
 
-<div class="post-content">
+<div class="projects">
   <hr />
   {% for category in site.categories %}
     {% capture category_slug %}{{ category | first }}{% endcapture %}
