--- a/_layouts/myposts.html
+++ b/_layouts/myposts.html
@@ -9,8 +9,8 @@ layout: default
     {{ content }}
 
     {% assign p_array = "" | split:"|"  %}
-    {% for project in site.project %}
-      {% capture p_slug %}{{ project.url | split:"/" | last }},{{ project.url }}{% endcapture %}
+    {% for project in site.myproject %}
+      {% capture p_slug %}{{ myproject.url | split:"/" | last }},{{ myproject.url }}{% endcapture %}
       {% assign p_slug_arr = p_slug | split:"," %}
       {% assign p_array = p_array | push: p_slug_arr  %}
     {% endfor %}
