--- a/_layouts/myposts.html
+++ b/_layouts/myposts.html
@@ -25,8 +25,12 @@ layout: default
     <div class="projects">
       {% include myproject_tags.html %}
       
+     <!--myproject-->
       {% for i in site.data.myprojects %}
       <div class="project-item project-outer" data-tags='{{ i.tags | jsonify | downcase }}'>
+       <!--myproject-->
+       
+         <!--myproject 클릭-->
         <div class="project-inner">
           <a href="/static/projects/{{ i.image }}" class="thickbox">
             <div class="project-img bordered" style="background-image: url('/static/projects/{{ i.image }}');"></div>
