--- a/_layouts/myposts.html
+++ b/_layouts/myposts.html
@@ -29,7 +29,7 @@ layout: default
       {% for i in site.data.myprojects %}
       <div class="project-item project-outer" data-tags='{{ i.tags | jsonify | downcase }}'>
        <!--myproject-->
-     
+     </div>
     </div>
   </div>
 </article>
