--- a/_layouts/myposts.html
+++ b/_layouts/myposts.html
@@ -7,19 +7,49 @@ layout: default
 
 <hr>
 
-<div class="post-content">
+ <div class="post-content">
     {{ content }}
 
- <!--카테고리-->
     {% assign p_array = "" | split:"|"  %}
-  <!--카테고리-->
- 
-  <!--myproject-->
-    {% for project in site.myproject %}
+    {% for project in site.project %}
       {% capture p_slug %}{{ project.url | split:"/" | last }},{{ project.url }}{% endcapture %}
       {% assign p_slug_arr = p_slug | split:"," %}
       {% assign p_array = p_array | push: p_slug_arr  %}
     {% endfor %}
-   <!--myproject-->
- 
-  </div>
+
+    <div class="projects">
+      {% include project_tags.html %}
+      
+      {% for i in site.data.projects %}
+      <div class="project-item project-outer" data-tags='{{ i.tags | jsonify | downcase }}'>
+        <div class="project-inner">
+          <a href="/static/projects/{{ i.image }}" class="thickbox">
+            <div class="project-img bordered" style="background-image: url('/static/projects/{{ i.image }}');"></div>
+          </a>
+          {% assign p_url = nil %}
+          {% for pr in p_array %}
+            {% if pr contains i.slug %}
+              {% assign p_url = pr[1] %}
+            {% endif %}
+          {% endfor %}
+
+          {% if p_url == nil %}{% assign p_url = i.url %}{% endif %}
+          {% if p_url %}
+            <a class="project-detail" href="{{ p_url }}">
+          {% endif %}
+            <h3 class="project-headlines">{{ i.name }}</h3>
+          {% if p_url %}
+            </a>
+          {% endif %}
+
+          <div class="project-content">
+            <div class="tag-holder">
+              {% if i.tags %}
+                {% for j in i.tags %}
+                  <span class="tags tag-filter" data-tag="{{ j | downcase }}"><a href="#{{ j }}">{{ j }}</a></span>
+                {% endfor %}
+              {% endif %}
+            </div>
+          </div>
+         
+         </div>
