--- a/_layouts/myposts.html
+++ b/_layouts/myposts.html
@@ -7,7 +7,13 @@ layout: default
 
 <hr>
 
- <div class="post-content">
+ <article class="post">
+  <header class="post-header">
+    <h1 class="post-title">{{ page.title }}</h1>
+    <hr />
+  </header>
+
+  <div class="post-content">
     {{ content }}
 
     {% assign p_array = "" | split:"|"  %}
@@ -44,12 +50,27 @@ layout: default
 
           <div class="project-content">
             <div class="tag-holder">
+             
               {% if i.tags %}
                 {% for j in i.tags %}
                   <span class="tags tag-filter" data-tag="{{ j | downcase }}"><a href="#{{ j }}">{{ j }}</a></span>
                 {% endfor %}
               {% endif %}
-            </div>
+            
+           </div>
           </div>
          
-         </div>
+          <div class="project-footer">
+            {% if i.url %}
+              <a href="{{ i.url }}" class="project-link" target="_blank"><i class="fa fa-globe"></i> View</a>
+            {% endif %}
+            <span class="project-timeline">{{ i.date }}</span>
+          </div>
+        
+       </div>
+        <hr>
+      </div>
+      {% endfor %}
+    </div>
+  </div>
+</article>
