--- a/_layouts/myposts.html
+++ b/_layouts/myposts.html
@@ -9,8 +9,8 @@ layout: default
   </header>
 
   <div class="post-content">
- <div class="post">{{ content }}</div>
-    
+      {{ content }}
+   
    {% assign p_array = "" | split:"|"  %}
     {% for project in site.myproject %}
       {% capture p_slug %}{{ project.url | split:"/" | last }},{{ project.url }}{% endcapture %}
@@ -19,7 +19,7 @@ layout: default
     {% endfor %}
 
     <div class="projects">
-      {% include project_tags.html %}
+      {% include myproject_tags.html %}
       
       {% for i in site.data.myprojects %}
       <div class="project-item project-outer" data-tags='{{ i.tags | jsonify | downcase }}'>
