Update and rename  myproject_tags.html to myproject_tags.html

--- a/_includes/myproject_tags.html
+++ b/_includes/myproject_tags.html
@@ -1,6 +1,6 @@
 {% if site.enableTags ==  true %}
 	<div id="tag-filter" class="tag-group">
-		<span class="tag-filter tag-cloud all active">All</span>
+		<span class="tag-filter tag-cloud all active">projectAll</span>
 		
     {% assign tagarray = site.tagarray %}
     {% for project in site.data.myprojects %}
