--- a/_layouts/myposts.html
+++ b/_layouts/myposts.html
@@ -19,7 +19,7 @@ layout: default
     {% endfor %}
 
     <div class="projects">
-      {% include project_tags.html %}
+      {% include myproject_tags.html %}
       
       {% for i in site.data.myprojects %}
       <div class="project-item project-outer" data-tags='{{ i.tags | jsonify | downcase }}'>
