--- a/_includes/myproject_tags.html
+++ b/_includes/myproject_tags.html
@@ -3,7 +3,7 @@
 		<span class="tag-filter tag-cloud all active">project All</span>
 		
     {% assign tagarray = site.tagarray %}
-    {% for project in site.data.myprojects %}
+    {% for project in site.data.projects %}
       {% for tag in myproject.tags %}
         {% assign tagarray = tagarray | push: tag %}
       {% endfor %}
